--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -16,9 +16,8 @@
 .quiz-img img{
     width: 100px;
     border-radius: 30%;
-    /* padding: ; */
     margin: 20px;
 }
 .body{
-    margin: 20px;
+    margin: 20px 20px 20px 0px;
 }
